fixed  Adaptive layout in block sport

--- a/app/index.html
+++ b/app/index.html
@@ -424,7 +424,8 @@
           </div>
       </div>
       <div class="sport-slider">
-        <div class="sport-box" style="background-image: url(img/sport-1.jpeg);">
+        <div class="sport-box">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport-1.jpeg);">
           <div class="sport-box__inner"> 
             <div class="sport-box__inner-title">Windsurfing</div>
             <div class="sport-box__inner-title-location">Whitehaven Beach <span>|</span> Australia</div>
@@ -435,7 +436,9 @@
             </div>
           </div>
         </div>
-        <div class="sport-box" style="background-image: url(img/sport-2.jpeg);">
+        </div>
+        <div class="sport-box">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport-2.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Kayaking</div>
             <div class="sport-box__inner-title-location">Las Salinas <span>|</span> Spain </div>
@@ -446,7 +449,9 @@
             </div>
           </div>
         </div>
-        <div class="sport-box" style="background-image: url(img/sport-3.jpeg);">
+        </div>
+        <div class="sport-box">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport-3.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Diving</div>
             <div class="sport-box__inner-title-location">Pink Sands Beach <span>|</span> Bahamas</div>
@@ -457,8 +462,11 @@
             </div>
           </div>
         </div>
-        <div class="sport-box" style="background-image: url(img/sport-4.jpg);">
-          <div class="sport-box__inner">
+        </div>
+        <div class="sport-box">
+
+        <div class="sport-box__wrapper" style="background-image: url(img/sport-4.jpg);">
+         <div class="sport-box__inner">
             <div class="sport-box__inner-title">Surfing</div>
             <div class="sport-box__inner-title-location">South Beach <span>|</span> Miami</div>
             <div class="btn-box">
@@ -467,8 +475,10 @@
               </a>
             </div>
           </div>
+        </div> 
         </div>
-        <div class="sport-box" style="background-image: url(img/sport-5.jpeg);">
+        <div class="sport-box">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport-5.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Flyboarding</div>
             <div class="sport-box__inner-title-location">Copacabana <span>|</span> Brazil</div>
@@ -479,7 +489,9 @@
             </div>
           </div>
         </div>
-        <div class="sport-box" style="background-image: url(img/sport-6.jpeg);">
+        </div>
+        <div class="sport-box">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport-6.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Wakeskating</div>
             <div class="sport-box__inner-title-location">Varadero <span>|</span> Cuba</div>
@@ -490,8 +502,10 @@
             </div>
           </div>
         </div>
-        <div class="sport-box" style="background-image: url(img/sport-7.jpg);">
-          <div class="sport-box__inner">
+        </div>
+        <div class="sport-box">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport-7.jpg);"> 
+           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Snorkeling</div>
             <div class="sport-box__inner-title-location">Lombok <span>|</span> Indonesia</div>
             <div class="btn-box">
@@ -501,7 +515,9 @@
             </div>
           </div>
         </div>
-        <div class="sport-box" style="background-image: url(img/sport-8.jpeg);">
+        </div>
+        <div class="sport-box">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport-8.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Sup Boarding</div>
             <div class="sport-box__inner-title-location">Wakaya <span>|</span> Fiji</div>
@@ -511,6 +527,7 @@
               </a>
             </div>
           </div>
+        </div>
         </div>
       </div>
   </section>
@@ -1501,6 +1518,7 @@
                 <div class="surfboard-box__content">
                   Double Concave with Vee Shape low point
                 </div>
+                <div class="slider-dots__clic">kliknij</div>
               </div>
               <!--3 surfboard-box-->
               <div class="surfboard-box surfboard__position--3">
