--- a/app/index.html
+++ b/app/index.html
@@ -2224,7 +2224,16 @@
   </section>
   <!-- Shop -->
 
-  
+  <!-- Footer -->
+  <footer class="footer">
+      <a href="#" class="button">
+        trvl <span> | </span> shore
+      </a>
+      <div class="footer__copy">
+        © trvl shore 2020. All Rights Reserved.
+      </div>
+  </footer>
+  <!-- Footer -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
