--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
             <!-- LOGO -->
         <div class="logo">
           <a href="#">
-            <img src="img/headr/Logo.svg" alt="">
+            <img src="img/headr/Logo.png" alt="">
           </a>
         </div>
         <nav class="menu">
