implemented about.html

--- a/app/index.html
+++ b/app/index.html
@@ -56,8 +56,8 @@
         <nav class="menu">
           <ul class="menu__list">
             <li>
-              <a href="#">
-               <img src="img/iconav-1.svg" alt=""><span>o nas</span>
+              <a href="about.html">
+               <img src="img/iconav-1.svg" alt=""><span>O firmie</span>
               </a>
             </li>
             <li>
