added smooth scrolling
Płynne przewijanie strony – smooth scrolling

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
       travel shore
       </div>
       <div class="header__arrows">
-        <a href="#" class="animated zoomInDown infinite slower">
+        <a href="#Shop" class="animated zoomInDown infinite slower">
           <img src="img/Down Arrows.svg" alt="">
         </a>
       </div>
@@ -61,22 +61,22 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#Sport">
                <img src="img/iconav-1.svg" alt=""><span>Sport</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#Travel">
                <img src="img/iconav-2.svg" alt=""><span>Travel</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#Relax">
                <img src="img/iconav-3.svg" alt=""><span>Relax</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#Shop">
                <img src="img/iconav-4.svg" alt=""><span>Shop</span>
               </a>
             </li>
@@ -198,7 +198,7 @@
   <!-- HEADER -->
 
   <!-- SPORT -->
-  <section class="sport">
+  <section id="Sport" class="sport">
     <div class="title">
       <span>
         Sport
@@ -562,7 +562,7 @@
   <!-- SPORT -->
 
   <!-- Travel -->
-  <section class="travel">
+  <section id="Travel" class="travel">
     <div class="container">
     <div class="title">
       <span>
@@ -913,7 +913,7 @@
   <!-- Travel -->
 
   <!-- Relax -->
-  <section class="relax">
+  <section id="Relax" class="relax">
     <div class="container">
     <div class="title">
       <span>
@@ -1479,7 +1479,7 @@
   <!-- Relax -->
   
   <!-- Shop -->
-  <section class="shop">
+  <section id="Shop" class="shop">
     <div class="title">
       <span>
         sklep
