--- a/app/ price.html
+++ b/app/ price.html
@@ -15,8 +15,8 @@
     <div class="relax">
         <div class="container">
             <div class="relax__arrows">
-                <a href="#Sport" class="animated zoomInDown infinite slower">
-                    <img src="img/Down-Arrows.svg" alt="">
+                <a href="#Sport" class="animated fadeInDown infinite slower">
+                    <img src="img/relax/down.png" alt="">
                 </a>
             </div>
             <div class="title">
@@ -130,6 +130,18 @@
       rezerwacja
     </a>
   </div>
+   <!-- Footer -->
+   <footer class="footer">
+    <div class="footer-item">
+      <a href="#">Kontakt</a>
+      <a href="#">O firmie</a>
+    </div>
+      <div class="footer__cop">
+        © trvl shore 2020. All Rights Reserved.
+      </div>
+      <a href=""><img src="img/footer/logofooter.png" alt=""></a>
+  </footer>
+  <!-- Footer -->
 
 
 
