--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,8 @@
       travel shore
       </div>
       <div class="header__arrows">
-        <a href="#Sport" class="animated zoomInDown infinite slower">
-          <img src="img/Down-Arrows.svg" alt="">
+        <a href="#Sport" class="animated fadeInDown infinite slower">
+          <img src="img/relax/down.png" alt="">
         </a>
       </div>
       <div class="header__map">
@@ -1688,10 +1688,14 @@
 
   <!-- Footer -->
   <footer class="footer">
-      <a href=""><img src="img/footer/logofooter.png" alt=""></a>
-      <div class="footer__copy">
+    <div class="footer-item">
+      <a href="#">Kontakt</a>
+      <a href="#">O firmie</a>
+    </div>
+      <div class="footer__cop">
         © trvl shore 2020. All Rights Reserved.
       </div>
+      <a href=""><img src="img/footer/logofooter.png" alt=""></a>
   </footer>
   <!-- Footer -->
   
