--- a/app/about.html
+++ b/app/about.html
@@ -14,7 +14,7 @@
             <div class="parallax">
                 <div class="parallax__aqua parallax__aqua__1"></div>
                 <div class="parallax__aqua parallax__aqua__2"></div>
-                <div class="parallax__aqua parallax__aqua__3"></div>
+                <div class="parallax__aqua parallax__aqua__3 animated flash infinite slower"></div>
                 <div class="parallax__fog"></div>
             </div>
             <div class="content">
@@ -39,17 +39,22 @@
                                 <li>Вы можете получить полный спектр обслуживания в нашей компании: турпоездки, круизы, авиабилеты, визы, страховки. Мы можем создать любой тур по вашему желанию</li>
                             </ul>
                         </div>
-                        <div class="logo-about">
-                            <a href=""><img src="img/footer/logofooter.png" alt=""></a>
-                            <div class="footer__copy">
-                            © trvl shore 2020. All Rights Reserved.
-                            </div>
-                        </div>
                 </div>
+                 <!-- Footer -->
+                 <footer class="footer">
+                    <div class="footer-item">
+                    <a href="#">Kontakt</a>
+                    <a href="#">home</a>
+                    </div>
+                    <div class="footer__cop">
+                        © trvl shore 2020. All Rights Reserved.
+                    </div>
+                    <a href=""><img src="img/footer/logofooter.png" alt=""></a>
+                </footer>
+                <!-- Footer -->
             </div>
         </div>
     </div>
-
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
