--- a/app/about.html
+++ b/app/about.html
@@ -9,6 +9,50 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+  <div class="header-wrap">
+    <div class="header-wrap__body">
+        <div class="logo">
+            <a href="#">
+                <img src="img/footer/logofooter.png" alt="">
+            </a>
+        </div>
+        <div class="header__burger">
+            <span></span>
+        </div>
+        <nav class="header__menu">
+            <ul class="header__list">
+                <li>
+                    <a href="about.html">
+                    <img src="" alt=""><span>O firmie</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="%20price.html">
+                    <img src="" alt=""><span>Kalkulator cen</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#Sport">
+                    <img src="" alt=""><span>Sport</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#Travel">
+                    <img src="" alt=""><span>Travel</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#Shop">
+                    <img src="" alt=""><span>Shop</span>
+                    </a>
+                </li>
+                <div class="header__location">
+                  wrocław
+                </div>
+            </ul>
+        </nav>
+    </div>
+</div>
     <div class="wrapper">
         <div class="page">
             <div class="parallax">
@@ -18,12 +62,12 @@
                 <div class="parallax__fog"></div>
             </div>
             <div class="content">
-                <div class="content__body">
-                        <div class="content__header">
+            <div class="content__body">
+                <div class="content__header">
                             <h1 class="content__title">travel shore</h1>
                             <h2 class="content__subtitle">TWOJE WAKACJE NA NAJLEPSZYCH PLAŻACH ŚWIATA</h2>
-                        </div>
-                        <div class="content__article">
+                </div>
+                <div class="content__article">
                             <p>
                                 Отдых, Друзья, это стиль жизни! Мы хотим, чтобы Вы путешествовали. Чтобы Вы увидели волшебные закаты в теплых южных морях и ходили бсиком по сахарно-белым пляжам, чувствовали пену у ног, шум прибоя и соленый воздух прозрачных вод бескрайнего океана… Чтобы Вы попробовали настоящий обжигающий коньяк, ощутили манящий вкус французских устриц и марокканских специй… Чтобы Вы побывали у подножия великих древних сооружений человечества: пирамиды Гизы в Египте, мегалиты Мачу Пикчу в Перу, Великая Китайская стена и Терракотовая армия Сиань, статуя Христа на вершине Корковадо в Бразилии…
                             </p>
@@ -38,20 +82,23 @@
                                 <li>Наши сотрудники проходят регулярное обучение и аттестацию, посещают предлагаемые Вам страны.</li>
                                 <li>Вы можете получить полный спектр обслуживания в нашей компании: турпоездки, круизы, авиабилеты, визы, страховки. Мы можем создать любой тур по вашему желанию</li>
                             </ul>
-                        </div>
+                        
                 </div>
-                 <!-- Footer -->
-                 <footer class="footer">
+            </div>
+            <!-- Footer -->
+            <footer class="footer">
                     <div class="footer-item">
-                    <a href="#">Kontakt</a>
-                    <a href="#">home</a>
+                        <a href="#">Kontakt</a>
+                        <a href="#">O firmie</a>
                     </div>
                     <div class="footer__cop">
-                        © trvl shore 2020. All Rights Reserved.
+                        © 2020 travel shore biuro podróży
                     </div>
-                    <a href=""><img src="img/footer/logofooter.png" alt=""></a>
-                </footer>
-                <!-- Footer -->
+                    <div class="footer__logo">
+                        <a href=""><img src="img/footer/logofooter.png" alt=""></a>
+                    </div>
+            </footer>
+            <!-- Footer -->
             </div>
         </div>
     </div>
