--- a/app/relax.html
+++ b/app/relax.html
@@ -206,7 +206,7 @@
       <a href="#">O firmie</a>
     </div>
       <div class="footer__cop">
-        © trvl shore 2020. All Rights Reserved.
+        © 2020 travel shore biuro podróży
       </div>
       <a href=""><img src="img/footer/logofooter.png" alt=""></a>
   </footer>
