implemented sub-header__list

--- a/app/relax.html
+++ b/app/relax.html
@@ -13,6 +13,58 @@
     <div class="header-price" style="background-image: url(img/header-bg.jpg);"></div>
       <!-- Relax -->
     <div class="relax">
+      <div class="header-wrap">
+        <div class="header-wrap__body">
+            <div class="logo">
+                <a href="#">
+                    <img src="img/footer/logofooter.png" alt="">
+                </a>
+            </div>
+            <div class="header__item">
+              <a href="about.html">
+                <img src="" alt=""><span>O firmie</span>
+              </a>
+              <a href="about.html">
+                <img src="" alt=""><span>Kontakt</span>
+              </a>
+            </div>
+            <div class="header__burger">
+                <span></span>
+            </div>
+            <nav class="header__menu">
+                <ul class="header__list">
+                    <li>
+                        <a href="about.html" class="list-item">
+                        <img src="" alt=""><span>O firmie</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="relax.html" class="list-item">
+                        <img src="" alt=""><span>Kalkulator cen</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Sport" class="list-item">
+                        <img src="" alt=""><span>Sport</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Travel" class="list-item">
+                        <img src="" alt=""><span>Travel</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Shop" class="list-item">
+                        <img src="" alt=""><span>Shop</span>
+                        </a>
+                    </li>
+                    <div class="header__location">
+                      wrocław
+                    </div>
+                </ul>
+            </nav>
+        </div>
+    </div>
         <div class="container">
             <div class="relax__arrows">
                 <a href="#Sport" class="animated fadeInDown infinite slower">
@@ -125,11 +177,17 @@
       </div>
     </div>
   </div>
+  <div class="relax__arrows">
+    <h2>szybka rezerwacja biletów</h2>
+    <a href="#footer" class="animated fadeInDown infinite slower">
+        <img src="img/relax/down1.png" alt="">
+    </a>
+  </div>
   <div class="relax-slider__btn">
+    <buton class="btn">rezerwacja</buton>
   </div>
     <!-- Form -->
       <div class="relax-dot">
-        <h2>w celu rezerwacji biletu zapraszam do kontaktu</h2>
         <div class="profile">
           <div class="wrap">
             <div class="contact-form">
@@ -192,6 +250,7 @@
                     <label>Wiadomość</label>
                     <span></span>
                     <button type="button" id="sendMail" class="button">rezerwacja</button>
+                    <div class="form-close"></div>
               </form>
               <div id="errorMess" class="error"></div>
             </div>
@@ -200,7 +259,7 @@
       </div> 
     <!-- Form --> 
    <!-- Footer -->
-   <footer class="footer">
+   <footer class="footer" id="footer">
     <div class="footer-item">
       <a href="#">Kontakt</a>
       <a href="#">O firmie</a>
@@ -208,10 +267,9 @@
       <div class="footer__cop">
         © 2020 travel shore biuro podróży
       </div>
-      <a href=""><img src="img/footer/logofooter.png" alt=""></a>
+        <a href="index.html"><img src="img/footer/logofooter.png" alt=""></a>
   </footer>
   <!-- Footer -->
-
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
