--- a/app/index.html
+++ b/app/index.html
@@ -20,10 +20,10 @@
           </div>
           <div class="header__item">
             <a href="about.html">
-              <img src="" alt=""><span>O firmie</span>
+              <span>O firmie</span>
             </a>
             <a href="about.html">
-              <img src="" alt=""><span>Kontakt</span>
+              <span>Kontakt</span>
             </a>
           </div>
           <div class="header__burger">
@@ -33,27 +33,69 @@
               <ul class="header__list">
                   <li>
                       <a href="about.html" class="list-item">
-                      <img src="" alt=""><span>O firmie</span>
-                      </a>
-                  </li>
-                  <li>
-                      <a href="menu.html" class="list-item">
-                      <img src="" alt=""><span>Kalkulator cen</span>
+                      <span>O firmie</span>
                       </a>
                   </li>
                   <li>
                       <a href="#Sport" class="list-item">
-                      <img src="" alt=""><span>Sport</span>
+                      <span>Sport</span>
                       </a>
                   </li>
                   <li>
                       <a href="#Travel" class="list-item">
-                      <img src="" alt=""><span>Travel</span>
+                      <span>Podróż</span>
                       </a>
+                      <ul class="sub-header__list">
+                        <li>
+                          <a href="#Shop" class="sub-list-item">
+                            Australia
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#Shop" class="sub-list-item">
+                            Spain
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#Shop" class="sub-list-item">
+                            Bahamas
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#Shop" class="sub-list-item">
+                            Miami
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#Shop" class="sub-list-item">
+                            Brazil
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#Shop" class="sub-list-item">
+                            Cuba
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#Shop" class="sub-list-item">
+                            Indonesia
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#Shop" class="sub-list-item">
+                            Fiji
+                          </a>
+                        </li>
+                      </ul>
                   </li>
                   <li>
                       <a href="#Shop" class="list-item">
-                      <img src="" alt=""><span>Shop</span>
+                      <span>sklep</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="contact.html" class="list-item">
+                      <span>Kontakt</span>
                       </a>
                   </li>
                   <div class="header__location">
@@ -1680,9 +1722,7 @@
       <div class="footer__cop">
         © 2020 travel shore biuro podróży
       </div>
-      <div class="footer__logo">
         <a href=""><img src="img/footer/logofooter.png" alt=""></a>
-      </div>
   </footer>
   <!-- Footer -->
   
