implemented contact.html

--- a/app/relax.html
+++ b/app/relax.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Price</title>
+  <title>Relax</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,500,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -22,10 +22,10 @@
             </div>
             <div class="header__item">
               <a href="about.html">
-                <img src="" alt=""><span>O firmie</span>
+                <span>O firmie</span>
               </a>
               <a href="about.html">
-                <img src="" alt=""><span>Kontakt</span>
+                <span>Kontakt</span>
               </a>
             </div>
             <div class="header__burger">
@@ -35,27 +35,69 @@
                 <ul class="header__list">
                     <li>
                         <a href="about.html" class="list-item">
-                        <img src="" alt=""><span>O firmie</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="relax.html" class="list-item">
-                        <img src="" alt=""><span>Kalkulator cen</span>
+                        <span>O firmie</span>
                         </a>
                     </li>
                     <li>
                         <a href="#Sport" class="list-item">
-                        <img src="" alt=""><span>Sport</span>
+                        <span>Sport</span>
                         </a>
                     </li>
                     <li>
                         <a href="#Travel" class="list-item">
-                        <img src="" alt=""><span>Travel</span>
+                        <span>Podróż</span>
                         </a>
+                        <ul class="sub-header__list">
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Australia
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Spain
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Bahamas
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Miami
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Brazil
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Cuba
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Indonesia
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Fiji
+                            </a>
+                          </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#Shop" class="list-item">
-                        <img src="" alt=""><span>Shop</span>
+                        <span>sklep</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="list-item">
+                        <span>Kontakt</span>
                         </a>
                     </li>
                     <div class="header__location">
