--- a/app/about.html
+++ b/app/about.html
@@ -9,50 +9,100 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <div class="header-wrap">
-    <div class="header-wrap__body">
-        <div class="logo">
-            <a href="#">
-                <img src="img/footer/logofooter.png" alt="">
-            </a>
+    <div class="header-wrap">
+        <div class="header-wrap__body">
+            <div class="logo">
+                <a href="#">
+                    <img src="img/footer/logofooter.png" alt="">
+                </a>
+            </div>
+            <div class="header__item">
+              <a href="about.html">
+                <span>O firmie</span>
+              </a>
+              <a href="about.html">
+                <span>Kontakt</span>
+              </a>
+            </div>
+            <div class="header__burger">
+                <span></span>
+            </div>
+            <nav class="header__menu">
+                <ul class="header__list">
+                    <li>
+                        <a href="about.html" class="list-item">
+                        <span>O firmie</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Sport" class="list-item">
+                        <span>Sport</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Travel" class="list-item">
+                        <span>Podróż</span>
+                        </a>
+                        <ul class="sub-header__list">
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Australia
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Spain
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Bahamas
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Miami
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Brazil
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Cuba
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Indonesia
+                            </a>
+                          </li>
+                          <li>
+                            <a href="#Shop" class="sub-list-item">
+                              Fiji
+                            </a>
+                          </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#Shop" class="list-item">
+                        <span>sklep</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="list-item">
+                        <span>Kontakt</span>
+                        </a>
+                    </li>
+                    <div class="header__location">
+                      wrocław
+                    </div>
+                </ul>
+            </nav>
         </div>
-        <div class="header__burger">
-            <span></span>
-        </div>
-        <nav class="header__menu">
-            <ul class="header__list">
-                <li>
-                    <a href="about.html">
-                    <img src="" alt=""><span>O firmie</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="%20price.html">
-                    <img src="" alt=""><span>Kalkulator cen</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#Sport">
-                    <img src="" alt=""><span>Sport</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#Travel">
-                    <img src="" alt=""><span>Travel</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#Shop">
-                    <img src="" alt=""><span>Shop</span>
-                    </a>
-                </li>
-                <div class="header__location">
-                  wrocław
-                </div>
-            </ul>
-        </nav>
     </div>
-</div>
     <div class="wrapper">
         <div class="page">
             <div class="parallax">
