implemented grid in block travel

--- a/app/index.html
+++ b/app/index.html
@@ -597,17 +597,41 @@
         <h3>Podróż</h3>
       </span>
     </div>
+    <div class="travel-slider__subtitle">
+      <div class="subtitle">
+        <div class="suptitle-left">aktualne oferty</div>
+        <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
+      </div>
+    </div>
+    <div class="travel-grid">
+      <div class="wrap-item">
+        <div class="travel-grid__item" style="background-image: url(img/travel-bg.png)"> <span>Australia</span> </div>
+      </div>
+      <div class="wrap-item">
+        <div class="travel-grid__item" style="background-image: url(img/travel-bg1.png)"> <span>Australia</span> </div>
+      </div>
+      <div class="wrap-item">
+        <div class="travel-grid__item" style="background-image: url(img/travel-bg2.png)"> <span>Australia</span> </div>
+      </div>
+      <div class="wrap-item">
+        <div class="travel-grid__item" style="background-image: url(img/travel-bg3.png)"> <span>Australia</span> </div>
+      </div>
+      <div class="wrap-item">
+        <div class="travel-grid__item" style="background-image: url(img/travel-bg4.png)"> <span>Australia</span> </div>
+      </div>
+      <div class="wrap-item">
+        <div class="travel-grid__item" style="background-image: url(img/travel-bg5.png)"> <span>Australia</span> </div>
+      </div>
+      <div class="wrap-item">
+        <div class="travel-grid__item" style="background-image: url(img/travel-bg6.png)"> <span>Australia</span> </div>
+      </div>
+      <div class="wrap-item">
+        <div class="travel-grid__item" style="background-image: url(img/travel-bg7.png)"> <span>Australia</span> </div>
+      </div>
+    </div>
     <div class="travel__slider">
       <!-- 1 -->
       <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg.png);">
-          <div class="travel-slider__subtitle">
-            <div class="subtitle">
-              <div class="suptitle-left">aktualne oferty</div>
-              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
-            </div>
-          </div>
-        </div>
         <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
             <div class="suptitle-right">Airline</div>
@@ -633,23 +657,10 @@
               <span>Podróż w obie strony</span>
             </div>
           </div>
-        </div>
-        <div class="travel-slider__btn">
-          <a href="#" class="btn">
-            zobacz <span> | </span> więcej
-          </a>
         </div>
       </div>
       <!-- 2 -->
       <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg1.png);">
-          <div class="travel-slider__subtitle">
-            <div class="subtitle">
-              <div class="suptitle-left">aktualne oferty</div>
-              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
-            </div>
-          </div>
-        </div>
         <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
             <div class="suptitle-right">Airline</div>
@@ -675,23 +686,10 @@
               <span>Podróż w obie strony</span>
             </div>
           </div>
-        </div>
-        <div class="travel-slider__btn">
-          <a href="#" class="btn">
-            zobacz <span> | </span> więcej
-          </a>
         </div>
       </div>
       <!-- 3 -->
       <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg2.png);">
-          <div class="travel-slider__subtitle">
-            <div class="subtitle">
-              <div class="suptitle-left">aktualne oferty</div>
-              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
-            </div>
-          </div>
-        </div>
         <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
             <div class="suptitle-right">Airline</div>
@@ -717,23 +715,10 @@
               <span>Podróż w obie strony</span>
             </div>
           </div>
-        </div>
-        <div class="travel-slider__btn">
-          <a href="#" class="btn">
-            zobacz <span> | </span> więcej
-          </a>
         </div>
       </div>
       <!-- 4 -->
       <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg3.png);">
-          <div class="travel-slider__subtitle">
-            <div class="subtitle">
-              <div class="suptitle-left">aktualne oferty</div>
-              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
-            </div>
-          </div>
-        </div>
         <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
             <div class="suptitle-right">Airline</div>
@@ -759,23 +744,10 @@
               <span>Podróż w obie strony</span>
             </div>
           </div>
-        </div>
-        <div class="travel-slider__btn">
-          <a href="#" class="btn">
-            zobacz <span> | </span> więcej
-          </a>
         </div>
       </div>
        <!-- 5 -->
       <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg4.png);">
-          <div class="travel-slider__subtitle">
-            <div class="subtitle">
-              <div class="suptitle-left">aktualne oferty</div>
-              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
-            </div>
-          </div>
-        </div>
         <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
             <div class="suptitle-right">Airline</div>
@@ -801,23 +773,10 @@
               <span>Podróż w obie strony</span>
             </div>
           </div>
-        </div>
-        <div class="travel-slider__btn">
-          <a href="#" class="btn">
-            zobacz <span> | </span> więcej
-          </a>
         </div>
       </div>
       <!-- 6 -->
       <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg5.png);">
-          <div class="travel-slider__subtitle">
-            <div class="subtitle">
-              <div class="suptitle-left">aktualne oferty</div>
-              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
-            </div>
-          </div>
-        </div>
         <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
             <div class="suptitle-right">Airline</div>
@@ -843,23 +802,10 @@
               <span>Podróż w obie strony</span>
             </div>
           </div>
-        </div>
-        <div class="travel-slider__btn">
-          <a href="#" class="btn">
-            zobacz <span> | </span> więcej
-          </a>
         </div>
       </div>
       <!-- 7 -->
       <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg6.png);">
-          <div class="travel-slider__subtitle">
-            <div class="subtitle">
-              <div class="suptitle-left">aktualne oferty</div>
-              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
-            </div>
-          </div>
-        </div>
         <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
             <div class="suptitle-right">Airline</div>
@@ -885,23 +831,10 @@
               <span>Podróż w obie strony</span>
             </div>
           </div>
-        </div>
-        <div class="travel-slider__btn">
-          <a href="#" class="btn">
-            zobacz <span> | </span> więcej
-          </a>
         </div>
       </div>
       <!-- 8 -->
       <div class="travel__slider-item travel-slider">
-        <div class="travel-slider__top" style="background-image: url(img/travel-bg7.png);">
-          <div class="travel-slider__subtitle">
-            <div class="subtitle">
-              <div class="suptitle-left">aktualne oferty</div>
-              <div class="subtitle__head">Whitehaven Beach <span>|</span> Australia</div>
-            </div>
-          </div>
-        </div>
         <div class="travel-slider__descr" style="background-image: url(img/Bitmap.png);">
           <div class="descr">
             <div class="suptitle-right">Airline</div>
@@ -927,11 +860,6 @@
               <span>Podróż w obie strony</span>
             </div>
           </div>
-        </div>
-        <div class="travel-slider__btn">
-          <a href="#" class="btn">
-            zobacz <span> | </span> więcej
-          </a>
         </div>
       </div>
     </div>
